--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "flutter build web"
+  command = "git clone https://github.com/flutter/flutter.git --branch $FLUTTER_VERSION --depth 1 /opt/build/flutter && /opt/build/flutter/bin/flutter --version && /opt/build/flutter/bin/flutter build web --release"
   publish = "build/web"
-  
+
 [build.environment]
   FLUTTER_VERSION = "3.35.6"
