--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   pdf: ^3.10.4
   printing: ^5.12.0
   supabase_flutter: ^2.10.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
