--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   printing: ^5.12.0
   supabase_flutter: ^2.10.3
   shimmer: ^3.0.0
+  flutter_dotenv: ^6.0.0
+  file_picker: ^10.3.8
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +40,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - .env
 
 flutter_launcher_icons:
   android: true
