--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "git clone https://github.com/flutter/flutter.git --branch $FLUTTER_VERSION --depth 1 /opt/build/flutter && /opt/build/flutter/bin/flutter --version && /opt/build/flutter/bin/flutter build web --release"
+  command = "rm -rf /opt/build/flutter && git clone https://github.com/flutter/flutter.git --branch $FLUTTER_VERSION --depth 1 /opt/build/flutter && /opt/build/flutter/bin/flutter --version && /opt/build/flutter/bin/flutter build web --release"
   publish = "build/web"
 
 [build.environment]
